--- a/sass/css/utils/_container.scss
+++ b/sass/css/utils/_container.scss
@@ -1,7 +1,9 @@
 $container-max-width: 76.25rem;
 
 .container, %container {
-  max-width: $container-max-width;
+  // margin: 0 auto;
+  display: flex;
+  justify-content: center;
   padding: 0.75rem 1rem;
 
   @media (min-width: 700px) {
@@ -12,4 +14,8 @@ $container-max-width: 76.25rem;
     padding-left: 0;
     padding-right: 0;
   }
+}
+
+.container main, %container main {
+  max-width: $container-max-width;
 }
